infra/k8s/capital-markets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ants-capital-markets
  labels:
    app: ants
    flavor: capital-markets
    environment: lab
    project: ants-capital-markets
